<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="sync">Sync</string>
    <string name="sync_needed">Sync needed</string>
    <string name="gantt_chart">Gantt Chart</string>
    <string name="more_options">More options</string>
    <string name="settings">Settings</string>
    <string name="sortnote">Sort note</string>
    <string name="insert_timestamp">Insert timestamp</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="unlink">Unlink</string> <!-- Unlink from Dropbox -->
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <!-- "new" is reserved -->
    <string name="set">Set</string>
...
    <string name="browse">Browse</string>
    <string name="dropbox">Dropbox</string>
    <string name="delete">Delete</string>
    <string name="delete_with_quoted_argument">Delete “%s”</string>
    <string name="delete_amount_of_books">Delete %d notebooks</string>
    <string name="name">Name</string>
    <string name="query">Query</string>
    <string name="done">Done</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="mark_as_done_with_repeater">Reschedule %s</string>
...
    <string name="close">Close</string>
    <string name="import_">Import</string> <!-- Reserved keyword -->
    <string name="export">Export</string>
    <string name="overwrite">Overwrite</string>
    <string name="imported">Imported</string>
...

    <string name="books_context_menu_item_rename">Rename</string>
    <string name="books_context_menu_item_set_link">Set Link</string>
    <string name="books_context_menu_item_force_save">Force Save</string>
    <string name="books_context_menu_item_force_load">Force Load</string>
...

    <string name="repos_options_menu_new_repo">New Repository</string>
    <string name="book_name_already_exists">Notebook %s already exists</string>
    <string name="filter_name_already_exists">Search with the same name already exists</string>
    <string name="failed_creating_directory">Failed creating directory %s</string>
...
    <string name="notebook_imported">Notebook imported</string>

    <string name="book_does_not_exist_anymore">This notebook does not exist any more.</string>
    <string name="note_does_not_exist_anymore">This note does not exist any more.</string>
    <string name="search_does_not_exist_anymore">This search does not exist any more.</string>
...
    <string name="pref_title_notebooks">Notes &amp; Notebooks</string>
    <string name="notebook">Notebook</string>
    <string name="notebooks">Notebooks</string>
    <string name="searches">Searches</string>
    <string name="search">Search</string>
...
    <string name="note_has_been_modified">Note modified</string>
    <string name="discard_or_save_changes">Save changes?</string>
    <string name="rename">Rename</string>
    <string name="rename_book">Rename %s</string>
    <string name="failed_renaming_book">Failed renaming notebook</string>
...
    <string name="renamed_book_from">Renamed from “%s”</string>

    <string name="also_delete_linked_book">Delete linked remote notebook</string>
    <string name="also_delete_linked_books">Delete any linked remote notebooks</string>
    <string name="message_deleting_book_failed">Deleting notebook(s) failed: %s</string>
    <string name="message_book_deleted">Notebook(s) deleted</string>
...
    <string name="done_states">Keywords for completed (done) tasks</string>

    <string name="use_created_at_property">Use property for created-at time</string>
    <string name="use_created_at_property_summary">Sync created-at time using a property</string>

    <string name="created_at_property">Created-at property</string>

    <string name="properties">Properties</string>
...
    <string name="reversed_note_click_action">Swap note click and long-click actions</string>
    <string name="reversed_note_click_action_summary">Click to select note, long-click to open</string>
    <string name="look_and_feel">Look &amp; Feel</string>
    <string name="notes_list">List of notes</string>
    <string name="prefs_title_new_note">New note</string>
...
    <string name="primary_storage">Main storage</string>

    <string name="book_exported">Notebook exported to %s</string>

    <string name="failed_exporting_book">Failed exporting notebook: %s</string>
...
    <string name="preface_in_book_few_lines">Display few lines</string>

    <string name="created_property_name">CREATED</string>

    <string name="separate_notes_with_new_line_always">Always</string>
...
    <string name="not_modified">Not modified</string>

    <string name="notes_count_zero">Contains no notes</string>
    <plurals name="notes_count_nonzero">
        <item quantity="one">Contains <b>%d</b> note</item>
...
