...
    <item
        android:id="@+id/sync"
        app:showAsAction="never"
        android:title="@string/sync"/>

    <item
        android:id="@+id/activity_action_settings"
        app:showAsAction="never"
        android:title="@string/settings"/>

    <item
        android:id="@+id/show_pending_reminders"
        android:icon="@drawable/ic_alarm"
...
